syntax = "proto3";
package org.ilia.grpc;

message Book {
  string id = 1;
  string title = 2;
  string author = 3;
  string isbn = 4;
  int32 quantity = 5;
}

message BookWithoutId {
  string title = 1;
  string author = 2;
  string isbn = 3;
  int32 quantity = 4;
}

message CreateBookRequest {
  BookWithoutId book = 1;
}

message CreateBookResponse {
  string id = 1;
}

message FindBookByIdRequest {
  string id = 1;
}

message FindBookByIdResponse {
  Book book = 1;
}

message UpdateBookRequest {
  Book book = 1;
}

message UpdateBookResponse {
  Book book = 1;
}

message DeleteBookByIdRequest {
  string id = 1;
}

message DeleteBookByIdResponse {
  bool isDeleted = 1;
}

message ErrorResponse {
  string error = 1;
}

service BookService {
  rpc CreateBook (CreateBookRequest) returns (CreateBookResponse);
  rpc FindBookById (FindBookByIdRequest) returns (FindBookByIdResponse);
  rpc UpdateBook (UpdateBookRequest) returns (UpdateBookResponse);
  rpc DeleteBook (DeleteBookByIdRequest) returns (DeleteBookByIdResponse);
}
